; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_spcp8x5.c_spcp8x5_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_spcp8x5.c_spcp8x5_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial = type { i32, i32* }
%struct.spcp8x5_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_serial*)* @spcp8x5_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spcp8x5_release(%struct.usb_serial* %0) #0 {
  %2 = alloca %struct.usb_serial*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.spcp8x5_private*, align 8
  store %struct.usb_serial* %0, %struct.usb_serial** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %30, %1
  %6 = load i32, i32* %3, align 4
  %7 = load %struct.usb_serial*, %struct.usb_serial** %2, align 8
  %8 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp slt i32 %6, %9
  br i1 %10, label %11, label %33

11:                                               ; preds = %5
  %12 = load %struct.usb_serial*, %struct.usb_serial** %2, align 8
  %13 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.spcp8x5_private* @usb_get_serial_port_data(i32 %18)
  store %struct.spcp8x5_private* %19, %struct.spcp8x5_private** %4, align 8
  %20 = load %struct.spcp8x5_private*, %struct.spcp8x5_private** %4, align 8
  %21 = icmp ne %struct.spcp8x5_private* %20, null
  br i1 %21, label %22, label %29

22:                                               ; preds = %11
  %23 = load %struct.spcp8x5_private*, %struct.spcp8x5_private** %4, align 8
  %24 = getelementptr inbounds %struct.spcp8x5_private, %struct.spcp8x5_private* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @free_ringbuf(i32 %25)
  %27 = load %struct.spcp8x5_private*, %struct.spcp8x5_private** %4, align 8
  %28 = call i32 @kfree(%struct.spcp8x5_private* %27)
  br label %29

29:                                               ; preds = %22, %11
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %3, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %3, align 4
  br label %5

33:                                               ; preds = %5
  ret void
}

declare dso_local %struct.spcp8x5_private* @usb_get_serial_port_data(i32) #1

declare dso_local i32 @free_ringbuf(i32) #1

declare dso_local i32 @kfree(%struct.spcp8x5_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
